Fix logo vertical alignment

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -26,6 +26,8 @@
 }
 
 .navbar .navbar__item {
+  display: inline-flex !important;
+  align-items: center;
   white-space: nowrap !important;
 }
 
@@ -136,12 +138,12 @@
 }
 
 .navbar__items:first-of-type .navbar__item:first-of-type {
-  margin-left: 8% !important;
+  margin-left: 10% !important;
 }
 
 .navbar__logo img {
-  width: auto !important;
-  height: 1.875rem !important;
+  width: 7.9375rem !important;
+  height: 1.5625rem !important;
 }
 
 .navbar__items--right {
@@ -218,7 +220,6 @@
   border: 1px solid var(--text-color) !important;
 }
 
-
 @media (max-width: 1280px) {
   .navbar__logo img {
     display: none !important;
@@ -250,12 +251,20 @@
     width: auto !important;
     border: none !important;
   }
-  .DocSearch-Button-Keys, .DocSearch-Button-Placeholder {
+
+  .DocSearch-Button-Keys,
+  .DocSearch-Button-Placeholder {
     display: none !important;
   }
+
+  .navbar .navbar__item {
+    display: none !important;
+  }
+
   .navbar .navbar_download_button {
     display: none !important;
   }
+
   .navbar-sidebar .navbar_download_button {
     display: inline-flex !important;
     margin-top: 1rem !important;
